--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.7.1",
     "lucide-react": "^0.469.0",
+    "motion": "^11.15.0",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
