Add react-type-animation package to dependencies

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "motion": "^11.15.0",
     "next": "15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
