--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "motion": "^11.15.0",
     "next": "15.1.3",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-type-animation": "^3.2.0"
   },
